# deepagents-contrib-aws

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/extensions/: .registry
docs/: agentcore-sandbox.md  development.md  s3-backend.md
examples/deep_research_agent/: .env.example  .gitignore  README.md  graph.py  main.py  pyproject.toml  setup_backend.py  test_prompts.py
examples/deep_research_agent/memory/: AGENTS.md
examples/deep_research_agent/skills/twitter-post/: SKILL.md
examples/deep_research_agent/tests/: aws_console.py  clean_memories.py  demo_prompts.md  example_prompts.txt  helpers.py  test_conversation_history.py  test_episodic_memory.py  test_hitl.py  test_large_tool_results.py  test_procedural_memory.py  test_progressive_disclosure.py  test_research_subagent.py  test_sandbox.py  test_semantic_memory.py
examples/product_support_agent/: .env.example  .gitignore  README.md  graph.py  main.py  pyproject.toml  setup_backend.py
examples/product_support_agent/memory/: AGENTS.md
examples/product_support_agent/skills/: electronics-support.md  finance-products.md  healthcare-products.md
examples/product_support_agent/skills/electronics-support/: SKILL.md
examples/product_support_agent/skills/finance-products/: SKILL.md
examples/product_support_agent/skills/healthcare-products/: SKILL.md
specs/001-s3-backend/: .analyze-done  .verify-done  data-model.md  plan.md  prompt.md  quickstart.md  research.md  review.md  spec.md  tasks.md
specs/001-s3-backend/checklists/: protocol-compliance.md  requirements.md
specs/001-s3-backend/contracts/: public-api.md
specs/002-agentcore-sandbox/: .analyze-done  .verify-done  data-model.md  plan.md  prompt.md  quickstart.md  research.md  review.md  spec.md  tasks.md
specs/002-agentcore-sandbox/checklists/: requirements.md  sdk-integration.md
specs/002-agentcore-sandbox/contracts/: public-api.md
specs/003-product-support-agent/: plan.md  prompt.md  spec.md  tasks.md
specs/004-deep-research-agent/: .analyze-done  .verify-done  data-model.md  plan.md  prompt.md  quickstart.md  research.md  review.md  spec.md  tasks.md
specs/004-deep-research-agent/checklists/: feature.md  requirements.md
src/deepagents_contrib_aws/: __init__.py  agentcore_sandbox.py  s3_backend.py
tests/: test_init.py
tests/agentcore_sandbox/: conftest.py  test_execute.py  test_files.py  test_integration.py  test_lifecycle.py
tests/s3_backend/: conftest.py  test_bulk.py  test_edit.py  test_from_env.py  test_glob.py  test_grep.py  test_helpers.py  test_integration.py  test_ls.py  test_read.py  test_write.py
