[project]
name = "deepagents-contrib-aws"
version = "0.2.1"
description = "AWS contributions for Deep Agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Gaurav Dhamija" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "boto3>=1.34.0",
    "deepagents>=0.4.0",
    "bedrock-agentcore",
]

[project.urls]
Homepage = "https://github.com/gauravhub/deepagents-contrib-aws"
Repository = "https://github.com/gauravhub/deepagents-contrib-aws"
Issues = "https://github.com/gauravhub/deepagents-contrib-aws/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "moto[s3]>=5.0",
    "bedrock-agentcore",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: run against a real S3 bucket (requires S3_TEST_BUCKET env var)",
    "integration: run against real AgentCore (requires AGENTCORE_TEST_REGION env var)",
]
addopts = "-m 'not integration'"
